<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:focusable="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civUserIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/octocat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/fullname"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/civUserIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/tvFullname"
        app:layout_constraintStart_toEndOf="@id/civUserIcon" />

    <TextView
        android:id="@+id/tvDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toBottomOf="@id/tvFullname"
        app:layout_constraintStart_toEndOf="@id/tvUsername" />

    <TextView
        android:id="@+id/tvFollowerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/public_repos"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toBottomOf="@id/tvFullname"
        app:layout_constraintStart_toEndOf="@id/tvDot" />

</androidx.constraintlayout.widget.ConstraintLayout>